Remove code for figures b/c unwieldy

--- a/incubator/simu_cov.Rmd
+++ b/incubator/simu_cov.Rmd
@@ -769,160 +769,6 @@ lapply(sim.out.list, FUN = function(fit) {
 ```
 
 
-### True Values
-
-```{r eval=FALSE, include=FALSE}
-sim.out.list[[3]]$beta.true.final
-
-
-
-sim.out.list[[3]]$gamma.m[, 5:6] - sim.out.list[[3]]$sim.fit$fit$mean_gamma[, 5:6]
-
-sim.out.list[[3]]$gamma.m[, 5:6] - sim.out.list[[3]]$compass.fit$fit$fit$mean_gamma[, 5:6]
-```
-
-
-
-#### Proportion Stim - Unstim vs Chemokine X
-
-```{r eval=FALSE, include=FALSE}
-sim.out.list[[1]]$beta.true.final
-```
-
-```{r eval=FALSE, include=FALSE}
-sim.out.list[[1]]$omega[1:5,]
-```
-
-```{r eval=FALSE, include=FALSE}
-sim.out.list[[1]]$gamma.m[1:5,]
-```
-
-```{r eval=FALSE, include=FALSE}
-sim.out.list[[1]]$sim.fit$data$n_u[1:5,]
-```
-
-```{r eval=FALSE, include=FALSE}
-sim.out.list[[1]]$sim.fit$data$n_s[1:5,]
-```
-
-
-```{r eval=FALSE, fig.height=, fig.width=15, include=FALSE}
-lapply(sim.out.list, FUN = function(sim) {
-  #Find the differences in proportions between stim and unstim
-  diff <- (sim$sim.fit$data$n_s / rowSums(sim$sim.fit$data$n_s)) - (sim$sim.fit$data$n_u / rowSums(sim$sim.fit$data$n_u))
-  
-  #Make a dataframe
-  diff.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
-                        diff
-  )
-  
-  #Rename columns
-  colnames(diff.df) <- gsub("^X", "cluster", colnames(diff.df))
-  
-  #Loop over each cluster/marker
-  plot.out.list <-
-    lapply(grep('cluster', colnames(diff.df), value = T), FUN = function(cluster) {
-      plot.out <-
-        #Plot as a function of HIV status
-        ggplot(data = diff.df %>%
-                          select(c(hiv,
-                                   {{cluster}}
-                          )
-                   ),
-                   aes_string(x = cluster,
-                              y = "hiv",
-                              fill = "hiv"
-                   )
-        )+
-        tidybayes::stat_halfeye()+
-        geom_jitter(width = 0,
-                    height = 0.1,
-                    alpha = 0.4,
-                    size = 0.7
-        )+
-        theme_bw()+
-        ylab("Cytokine X Presence")+
-        xlab("Prop. Stim - Prop. Unstim")+
-        scale_fill_discrete(name = "Cytokine X\npresence")+
-        scale_x_continuous(breaks = seq.default(from = -1,
-                                                to = 1, 
-                                                by = 0.005
-                           )
-        )+
-        labs(title = stringr::str_to_title({{cluster}}))
-    })
-  
-  # gridExtra::grid.arrange(grobs = plot.out.list,
-  #                         ncol = 4
-  # )
-  
-  gr <- gridExtra::marrangeGrob(grobs = plot.out.list,
-                                ncol = 4,
-                                nrow = 4
-  )
-  
-  gr
-  
-  # return(plot.out.list)
-})
-```
-
-
-
-<!-- #### True PFS vs True Protection -->
-
-```{r eval=FALSE, fig.height=10, fig.width=6, include=FALSE}
-lapply(sim.out.list, FUN = function(sim) {
-  #Linear predictor vs PFS
-  plot1 <-
-  ggplot(data = sim$sim.fit$data$meta,
-         aes(
-           x = pfs.true.pfs,
-           y = binomial()$linkfun(protect.prob.true)
-         )
-  )+
-  geom_point()+
-  geom_abline(intercept = beta.p[1],
-              slope = beta.p[2]
-  )+
-  xlim(-2, 2)
-  
-  #Probability of protection vs PFS
-  plot2 <- 
-  ggplot(data = sim$sim.fit$data$meta,
-         aes(
-           x = pfs.true.pfs,
-           y = protect.prob.true
-         )
-  )+
-  geom_point()+
-  xlim(-2, 2)+
-  ylim(0, 1)
-  
-  #PFS vs protection outcome
-  plot3 <-
-  ggplot(data = sim$sim.fit$data$meta,
-         aes(
-           x = pfs.true.pfs,
-           y = as.factor(protect.true)
-         )
-  )+
-  geom_point()+
-  tidybayes::stat_halfeye()
-  
-  # return(list(plot1, plot2, plot3))
-  
-  gr <- gridExtra::marrangeGrob(grobs = hist.plot.list,
-                                ncol = 2,
-                                nrow = 8
-  )
-  
-  gr
-})
-
-```
-
-
 
 ### Mean Gamma vs Omega
 
@@ -1008,81 +854,6 @@ do.call('rbind',
   )
 ```
 
-#### Figures
-
-```{r eval=FALSE, fig.height=20, fig.width=8, include=FALSE}
-lapply(sim.out.list, FUN = function(sim) {
-
-  #Omega - mean_gamma
-  omega.gamma.diff.covar <- sim$omega - sim$sim.fit$fit$mean_gamma[,1:sim$K1]
-  omega.gamma.diff.compass <- sim$omega - sim$compass.fit$fit$fit$mean_gamma[,1:sim$K1]
-  colnames(omega.gamma.diff.compass) <- NULL
-  
-  #Create datasets
-  omega.gamma.diff.covar.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
-                                          omega.gamma.diff.covar
-  )
-  omega.gamma.diff.compass.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
-                                            omega.gamma.diff.compass
-  )
-  
-  #Combine datasets in long format
-  omega.gamma.diff.df <-
-    bind_rows(
-      omega.gamma.diff.covar.df %>%
-        mutate(model = "COMPASScovariate"),
-      omega.gamma.diff.compass.df %>%
-        mutate(model = "COMPASS")
-    )
-  
-  #Rename columns
-  colnames(omega.gamma.diff.df) <- gsub("^X", "cluster", colnames(omega.gamma.diff.df))
-  
-  #Histograms
-  hist.plot.list <-
-    lapply(grep('cluster', colnames(omega.gamma.diff.df), value = T), FUN = function(cluster) {
-      
-      #Make the histogram for the current cluster
-      hist.plot <-
-        ggplot(data = omega.gamma.diff.df %>%
-                      select(c(hiv,
-                               model,
-                               {{cluster}}
-                      )
-               ),
-               aes_string(x = cluster,
-                          fill = "hiv"
-               )
-        )+
-        geom_histogram(bins = 80)+
-        facet_grid(hiv ~ model)+
-        theme_bw()+
-        scale_x_continuous(breaks = seq.default(from = -1,
-                                                to = 1,
-                                                by = 0.25
-                          )
-        )+
-        scale_fill_discrete(name = "Cytokine X\npresence")+
-        ylab("Frequency")+
-        xlab("Omega - Mean Gamma")+
-        labs(title = stringr::str_to_title({{cluster}}))
-      
-      return(hist.plot)
-    })
-  
-  # return(hist.plot.list)
-  gr <- gridExtra::marrangeGrob(grobs = hist.plot.list,
-                                ncol = 2,
-                                nrow = 8
-  )
-  
-  gr
-})
-```
-
-
-
-
 
 ### Mean Gamma vs True Gamma
 
@@ -1166,172 +937,7 @@ do.call('rbind',
 ```
 
 
-
-#### Figures
-
-```{r eval=FALSE, fig.height=20, fig.width=8, include=FALSE}
-lapply(sim.out.list, FUN = function(sim) {
-
-  #Gamma - mean_gamma
-  true.gamma.diff.covar <- sim$gamma.m - sim$sim.fit$fit$mean_gamma[,1:sim$K1]
-  true.gamma.diff.compass <- sim$gamma.m - sim$compass.fit$fit$fit$mean_gamma[,1:sim$K1]
-  colnames(true.gamma.diff.compass) <- NULL
-  
-  #Create datasets
-  true.gamma.diff.covar.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
-                                          true.gamma.diff.covar
-  )
-  true.gamma.diff.compass.df <- data.frame(hiv = as.factor(sim$sim.fit$data$meta$hiv),
-                                            true.gamma.diff.compass
-  )
-  
-  #Combine datasets in long format
-  true.gamma.diff.df <-
-    bind_rows(
-      true.gamma.diff.covar.df %>%
-        mutate(model = "COMPASScovariate"),
-      true.gamma.diff.compass.df %>%
-        mutate(model = "COMPASS")
-    )
-  
-  #Rename columns
-  colnames(true.gamma.diff.df) <- gsub("^X", "cluster", colnames(true.gamma.diff.df))
-  
-  #Histograms
-  hist.plot.list <-
-    lapply(grep('cluster', colnames(true.gamma.diff.df), value = T), FUN = function(cluster) {
-      
-      #Make the histogram for the current cluster
-      hist.plot <-
-        ggplot(data = true.gamma.diff.df %>%
-                      select(c(hiv,
-                               model,
-                               {{cluster}}
-                      )
-               ),
-               aes_string(x = cluster,
-                          fill = "hiv"
-               )
-        )+
-        geom_histogram(bins = 80)+
-        facet_grid(hiv ~ model)+
-        theme_bw()+
-        # scale_x_continuous(breaks = seq.default(from = -1,
-        #                                         to = 1,
-        #                                         by = 0.25
-        #                   )
-        # )+
-        scale_fill_discrete(name = "Cytokine X\npresence")+
-        ylab("Frequency")+
-        xlab("True Gamma - Mean Gamma")+
-        labs(title = stringr::str_to_title({{cluster}}))
-      
-      return(hist.plot)
-    })
-  
-  # return(hist.plot.list)
-  # gridExtra::grid.arrange(grobs = hist.plot.list,
-  #                         ncol = 2
-  # )
-  
-  gr <- gridExtra::marrangeGrob(grobs = hist.plot.list,
-                          ncol = 2,
-                          nrow = 8
-  )
-  
-  gr
-  
-})
-```
-
-
-
-### Gamma from COMPASScovariate vs COMPASS
-
-Add: Color by true gamma value
-
-```{r eval=FALSE, fig.height=20, fig.width=8, include=FALSE}
-lapply(sim.out.list, FUN = function(sim) {
-  #Find the differences in mean gamma matrices between COMPASS and COMPASScovariate
-  mean.gamma.diff <- sim$sim.fit$fit$mean_gamma - sim$compass.fit$fit$fit$mean_gamma
-  
-  #Remove colnames
-  colnames(mean.gamma.diff) <- NULL
-  
-  #Create datasets
-  mean.gamma.diff.df <- data.frame(mean.gamma.diff)
-  
-  #Subset columns where there are any differences
-  mean.gamma.diff <- mean.gamma.diff[, abs(colSums(mean.gamma.diff)) > 0]
-  
-  true.gamma <- as.data.frame(sim$gamma.m)
-  
-  #Rename columns
-  colnames(mean.gamma.diff.df) <- gsub("^X", "cluster", colnames(mean.gamma.diff.df))
-  colnames(true.gamma) <- gsub("^V", "cluster", colnames(true.gamma))
-  
-  mean.gamma.diff.df %>%
-    mutate(obs = row.names(.)) %>%
-    pivot_longer(values_to = "Diff",
-                 cols = starts_with("cluster")
-    ) %>%
-
-    inner_join(.,
-               true.gamma %>%
-                 mutate(obs = row.names(.)) %>%
-                 pivot_longer(values_to = "True",
-                              cols = starts_with("cluster")
-                 ),
-               by = c("obs", "name")
-    ) %>%
-    filter(Diff != 0)
-  
-  #Histograms
-  plot.list <-
-    lapply(grep('cluster', colnames(mean.gamma.diff.df)[-ncol(mean.gamma.diff.df)], value = T), FUN = function(cluster) {
-      
-      temp <-
-        mean.gamma.diff.df %>%
-          select(c(hiv,
-                   {{cluster}}
-                )
-          ) %>%
-          rename(est = {{cluster}}) %>%
-          mutate(true = as.factor(true.gamma[, colnames(true.gamma) == {{cluster}}])
-          )
-    
-      plot <-
-        ggplot(data = temp,
-               aes_string(x = "est",
-                          y = "hiv",
-                          color = "true"
-               )
-        )+
-        # tidybayes::stat_halfeye()+
-        geom_point(size = 0.6,
-                   alpha = 0.3
-        )+
-        geom_jitter(width = 0,
-                    height = 0.1
-        )+
-        theme_bw()+
-        ylab("Cytokine X Presence")+
-        xlab("Mean Gamma COMPASScov - COMPASS")+
-        labs(title = stringr::str_to_title({{cluster}}))
-      
-      return(plot)
-    })
-  
-  gr <- gridExtra::marrangeGrob(grobs = plot.list,
-                          ncol = 2,
-                          nrow = 8
-  )
-  
-  gr
-})
-```
-
-#### Variance of Gamma Posteriors
+### Variance of Gamma Posteriors
 
 Is the precision of the estimates lower for COMPASS without a covariate?
 
@@ -1359,12 +965,6 @@ do.call('rbind',
             Mean.CC.prop.C = mean(CC.prop.C)
   )
 ```
-
-
-
-#### Mean Gamma vs Prop Stim - Unstim
-
-Does COMPASScovariate pick up the signal from the age covariate via mean gamma? 
 
 
 ### Beta
