--- a/incubator/simu_cov.Rmd
+++ b/incubator/simu_cov.Rmd
@@ -1237,3 +1237,119 @@ do.call('rbind',
 - Posterior sample of beta, to generate probs, then mean of probs
 - Compare to true probs (omega)
 
+**Note:** Aim to vary the number of covariates and examine how the prediction accuracy changes
+
+
+```{r}
+sim = sim.out.list[[1]]
+
+dim(sim$X.test)
+dim(sim$sim.fit$fit$beta[,,1])
+
+apply(sim$sim.fit$fit$beta[,,1:2], MARGIN = c(1,3), FUN = function(beta) {
+  sim$X.test
+  # sim$X.test %*% beta
+  # binomial()$linkinv(sim$X.test %*% t(beta))
+})
+```
+
+```{r}
+apply(sim$sim.fit$fit$beta, MARGIN = c(1,2), FUN = function(beta) {
+  binomial()$linkinv(sim$X.test %*% t(beta))
+})
+
+lapply(1:2, FUN = function(i) {
+  binomial()$linkinv(sim$X.test %*% t(sim$sim.fit$fit$beta[,,i]))
+})
+
+(apply(sim$sim.fit$fit$beta[,,1:2], MARGIN = c(1,2), FUN = function(beta) {
+  # beta
+  sim$X.test[1,]
+  # binomial()$linkinv(sim$X.test %*% t(beta))
+}))
+
+apply(sim$sim.fit$fit$beta[1:2,1:2,1:2], MARGIN = c(1,2,3), FUN = function(beta) {
+  # beta
+  sim$X.test[1,]
+  # sim$X.test %*% t(sim$sim.fit$fit$beta[,,1])
+})
+
+```
+
+```{r}
+get.probs <- function(mat) {
+  return(binomial()$linkinv(sim$X.test %*% t(mat)))
+}
+
+apply(sim$sim.fit$fit$beta[,,1:2], MARGIN = c(3), FUN = get.probs)
+
+apply(sim$sim.fit$fit$beta[1:2,1:2,1:2], MARGIN = c(1,2), FUN = function(x) {
+  x
+})
+
+
+```
+
+```{r}
+my.mat <-
+  matrix(data = 1:20,
+         nrow = 5,
+         ncol = 4
+  )
+
+my.mat
+
+my.vec <- c(1,2,3)
+
+apply(my.mat, MARGIN = 1, FUN = function(x) {
+  my.vec
+  # x %*% my.vec
+})
+
+```
+
+```{r}
+#Betas -- 15 subsets, 4 covariates, 2 sets
+my.betas <- 
+  array(data = sample(c(0,1),
+                      size = 15*4*2,
+                      replace = TRUE
+        ),
+        dim = c(15,4,2)
+  )
+
+#Covariates -- 3 samples 4 covariates
+my.cov <- 
+  matrix(data = sample(c(0,1),
+                       size = 4*50,
+                       replace = TRUE
+         ),
+         nrow = 50,
+         ncol = 4
+  )
+
+my.cov.t <- t(my.cov)
+```
+
+
+```{r}
+my.cov %*% t(my.betas[,,1])
+my.cov %*% t(my.betas[,,2])
+
+dim(apply(my.betas, MARGIN = c(1,2), FUN = function(x) {
+  my.cov.t
+}))
+
+out <- apply(my.betas, MARGIN = c(1,2), FUN = function(x) {
+  x
+})
+out
+```
+
+
+```{r}
+apply(out, MARGIN = c(1,2), FUN = function(x) {
+  mean(x)
+})
+```
+
